--- a/_data/guanyu.yml
+++ b/_data/guanyu.yml
@@ -1,17 +1,17 @@
 - name: 官网
-  url: https://i.anyi.life/
+  url: https://dh.lq8.net/
 
 - name: 搜素
-  url: https://so.anyi.life/
+  url: https://so.lq8.net/
 
 - name: 休闲
-  url: https://vps.anyi.life/
+  url: https://bbs.lq8.net/
 
 - name: 探索
-  url: https://go.anyi.life/
+  url: https://www.lq8.net/
 
 - name: 博客
-  url: https://blog.anyi.life/
+  url: https://www.lq8.net/
 
 - name: 短网址
-  url: https://757.life
+  url: https://lq8.ner/
