--- a/_data/jianyan.yml
+++ b/_data/jianyan.yml
@@ -1,8 +1,8 @@
 - name: APP
-  url: https://blog.anyi.life/App
+  url: https://www.lq8.net/App
 
-- name: Tumblr
-  url: https://www.ay-doug.tumblr.com
+- name: 博客
+  url: https://www.lq8.net/
 
-- name: Twitter
-  url: https://twitter.com/g30711
+- name: BBS
+  url: https://bbs.lq8.net/
