--- a/_config.yml
+++ b/_config.yml
@@ -1,24 +1,24 @@
-repository: anyi98 / anyi98.github.io
-repository_url: https://github.com/anyi98/anyi98.github.io
+repository: lq8 / www.lq8.net
+repository_url: https://dh.lq8.net/
 
 timezone: Asia/Handan
 lang: zh_CN
 
-title: 安逸导航·AnYi-Navi
-alias_en: AnYi-Navi
-alias_cn: 安逸导航
+title: 678导航·简洁有用的导航
+alias_en: 678
+alias_cn: 678导航
 description: 世界的创新源于学术的探索•学术导航
-keywords: 安逸, 导航, 安逸导航, 学术导航, scholar, AnYi-Navi, AnYI, HEBART, Navi, Navigation
-url: https://anyi.life
-url: https://anyi98.github.io
+keywords: 678, 导航, 678导航, 学术导航, scholar, 678-Navi, 678, HEBART, 678, Navigation
+url: https://dh.lq8.net
+url: https://dh.lq8.net
 established_at: "2018-07-07T00:00+08:00"
 
 
-author: AnYi
-author_url: https://anyi.life
-organization: AnYi
-organization_url: https://blog.anyi.life
-contact: G298@QQ.COM
+author: 678
+author_url: https://dh.lq8.net
+organization: 678
+organization_url: https://dh.lq8.net
+contact: lq8.net
 
 image: /images/logo.png
 logo: /images/logo.png
