--- a/_data/guanyu.yml
+++ b/_data/guanyu.yml
@@ -1,17 +1,17 @@
 - name: 官网
-  url: https://dh.lq8.net/
+  url: https://i.lq8.net/
 
 - name: 搜素
   url: https://so.lq8.net/
 
 - name: 休闲
-  url: https://bbs.lq8.net/
+  url: https://vps.lq8.net/
 
 - name: 探索
-  url: https://www.lq8.net/
+  url: https://go.lq8.net/
 
 - name: 博客
-  url: https://www.lq8.net/
+  url: https://blog.lq8.net/
 
 - name: 短网址
-  url: https://lq8.ner/
+  url: https://dwz.cn
