--- a/_data/search_services.yml
+++ b/_data/search_services.yml
@@ -1,51 +1,3 @@
-- id: google
-  name: 谷歌
-  url: https://google.weihanli.xyz//search?q=
-  shortcut: 谷歌
-  icon: google blue inverted
-  style: black
-
-- id: google
-  name: 谷歌
-  url: http://gugeji.com//search?q=
-  style: black
-
-- id: baidumap
-  name: 学术
-  url: https://scholar.uulucky.com/scholar?q=
-  shortcut: 学术
-  icon: map blue inverted
-  style: black
-
-- id: googletranslate
-  name: 谷歌翻译
-  url: https://translate.google.cn/#zh-CN/en/
-  shortcut: 翻译
-  icon: google blue
-  style: black
-
-- id: sousou
-  name: 搜搜
-  url: http://www.soso.com/tx?ie=utf8&pid=&query=
-  shortcut: 搜搜
-  suffix: "&w=&sut=1183&sst0=1534829938117&lkt=0%2C0%2C0"
-  icon: qq
-  style: black
-
-- id: wikipedia
-  name: 维基
-  url: https://en.wikipedia.org/wiki/
-  shortcut: 维基
-  icon: wikipedia
-  style: black
-
-- id: bing
-  name: Bing
-  url: https://bing.com/search?q=
-  shortcut: 必应
-  icon: search red
-  style: black
-  
 - id: baidu
   name: 百度
   url: https://baidu.com/s?wd=
@@ -54,74 +6,9 @@
   icon: paw red inverted
   style: black
 
-- id: google-hk
-  name: google-hk
-  url: https://google.com.hk/search?q=
-  shortcut: 谷歌-Hk
-  icon: google red inverted
+- id: google
+  name: 谷歌
+  url: https://www.google404.net//search?q=
+  shortcut: 谷歌
+  icon: google blue inverted
   style: black
-  
-- id: github
-  name: Github
-  url: https://github.com/search?q=
-  shortcut: Github
-  icon: github
-  style: black
-  
-- id: Ceek
-  name: Ceek
-  url: http://www.ceek.jp/search.cgi?q=
-  style: black
-
-- id: Quora
-  name: Quora
-  url: https://www.quora.com/search?q=
-  style: black
-
-- id: Qwant
-  name: Qwant
-  url: https://www.qwant.com/?q=
-  suffix: "&t=web"
-
-- id: Yandex
-  name: Yandex
-  url: https://yandex.ru/search/?lr=111460&text=
-  style: black
-
-- id: hotbot
-  name: Hotbot
-  url: https://www.hotbot.com/web?q=
-  style: black
-
-- id: pipl.com
-  name: pipl man
-  url: https://pipl.com/search/?q=
-
-- id: peekier
-  name: peekier
-  url: https://peekier.com/#!
-
-- id: WebCrawler
-  name: WebCrawler
-  url: https://www.webcrawler.com/serp?q=
-  style: black
-
-- id: archive
-  name: Archive
-  url: https://archive.org/search.php?query=
-  style: black
-
-- id: Librivox
-  name: Librivox
-  url: https://librivox.org/search?q=
-  suffix: "&search_form=advanced"
-  
-- id: Gutenberg
-  name: Gutenberg
-  url: https://www.gutenberg.org/ebooks/search/?query=
-
-
-- id: Duckduckgo
-  name: Duckduckgo
-  url: https://duckduckgo.com/?q=
-  suffix: "&t=hg&ia=web"
