--- a/_data/analytics.yml
+++ b/_data/analytics.yml
@@ -2,8 +2,8 @@ google:
   id: UA-121779972-1
 
 matomo:
-  url: https://dh.lq8.net/
+  url: https://dh.lq8.net/analytics/
   domains:
-  - "*.dh.lq8.net"
+  - "*.678.life"
   site_id: 1
   token: 08f71596a4c68c7eae2daeb794a1fa69
