--- a/_data/jianyan.yml
+++ b/_data/jianyan.yml
@@ -1,8 +1,8 @@
 - name: APP
   url: https://www.lq8.net/App
 
-- name: 博客
-  url: https://www.lq8.net/
+- name: Tumblr
+  url: https://www.ay.tumblr.com
 
-- name: BBS
-  url: https://bbs.lq8.net/
+- name: Twitter
+  url: https://twitter.com/
