--- a/_config.yml
+++ b/_config.yml
@@ -18,7 +18,7 @@ author: lqb
 author_url: https://lq8.net
 organization: lqb
 organization_url: https://www.lq8.net
-contact: @lq8.net
+contact: hi@lq8.net
 
 image: /images/logo.png
 logo: /images/logo.png
